# c_learning

./: CMakeLists.txt  dongtaifenpeineicun.c  main.c  remotehost.cpp  string_api.c  structlearning.c  test.c  wangchao.c  zhizhenshuzu.c  zhizhenzengqiang.c  二级指针函数输出.c  函数.c  动态内存分配.c  指针数组和数组指针.c  模拟实现C语言中的字符串函数.c  自己实现string相关函数.c  间接赋值.c
alo_trainig/: BST.cpp  BST.h  BitTrainning.cpp  LinkedList.cpp  LinkedList.h  fifo.cpp  fifo.h  hanshuzhizhen.c  reverse_str.c  string_owner.cpp
elf/: ELF.cpp  ELF.h
fork/: fork.c
hanshuzhizhen/: FunPtr.cpp  callback.c
mmap/: filetest.c  mmaptest.c
peizhiwenjian/: 接口测试.c
select/: Client.cpp  Server.cpp  selecttest.cpp
siqumoxing/: siqu.c  static.c
tcp/: Client.cpp  Server.cpp
thread/: comsumer_productor.cpp  mutex.cpp  pthread.cpp
wenjiancaozuo/: file.c  test.txt
wenjianjiami/: cfg_crypt.ini
zifucuan/: mystring.c
内存泄漏/: leakmem_test.c
函数指针/: callback.c
字符串/: mystring.c
文件加密/: cfg_decrypt.ini
配置文件项目/: cfg.ini
